2010-02-23  José Millán Soto  <jmillan@igalia.com>

Reviewed by Xan Lopez.

        [Gtk] Server message not shown on http authentication
        https://bugs.webkit.org/show_bug.cgi?id=34219

        * webkit/webkitsoupauthdialog.c:
        (show_auth_dialog):
        Server message is displayed, messageLabel and message variables were
        renamed to avoid confusion.

Canonical link: https://commits.webkit.org/46441@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55139 268f45cc-cd09-0410-ab3c-d52691b4dbfc